feat: reset password

--- a/src/mails/resetPassword.html
+++ b/src/mails/resetPassword.html
@@ -315,9 +315,9 @@ img {
                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                   <tr>
                     <td>
-                      <p>Bonjour {{name}},</p>
-                      <p>Merci de vous être inscrit sur notre site. Pour activer votre compte, veuillez cliquer sur le bouton ci-dessous :</p>
-                      <p style="color: #0d47a1;">Ce lien sera valable 15 minutes.</p>
+                      <p>{{email}},</p>
+                      <p>Vous avez demandé à réinitialiser votre mot de passe. Pour réinitialiser votre mot de passe, veuillez cliquer sur le bouton ci-dessous :</p>
+                      <p style="color: #0d47a1;">Ce lien sera valable 5 minutes.</p>
                       <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                         <tbody>
                           <tr>
@@ -325,7 +325,7 @@ img {
                               <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                 <tbody>
                                   <tr>
-                                    <td> <a style="color: #ffffff;" href="http://127.0.0.1:3000/api/v1/auth/validate-account/{{token}}" target="_blank">Activer mon compte</a> </td>
+                                    <td> <a style="color: #ffffff;" href="http://127.0.0.1:3000/api/v1/auth/reset-password/{{token}}" target="_blank">Réinitialiser mon mot de passe</a> </td>
                                   </tr>
                                 </tbody>
                               </table>
@@ -333,7 +333,7 @@ img {
                           </tr>
                         </tbody>
                       </table>
-                      <p>Si vous n'avez pas créé de compte sur notre site, vous pouvez ignorer cet email.</p>
+                      <p>Si vous n'avez pas demandé à réinitialiser votre mot de passe, vous pouvez ignorer cet email.</p>
                       <p>Merci et à bientôt !</p>
                       <p>Cordialement,<br>L'équipe de Votre Site</p>
                     </td>
